[package]
name        = "caliban-output-styles"
version.workspace = true
description = "Output-style loader + system-prompt splice for the caliban agent harness"
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
rust-version.workspace = true
publish     = false

[dependencies]
caliban-common     = { path = "../caliban-common" }
caliban-agent-core = { path = "../caliban-agent-core" }
serde       = { workspace = true }
serde_yaml  = "0.9"
ignore      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
dirs        = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
