[package]
name        = "caliban-output-styles"
version.workspace = true
description = "Output-style loader + system-prompt splice for the caliban agent harness — internal crate for the caliban binary; no API stability, pin exact versions"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true

[dependencies]
caliban-common     = { workspace = true }
caliban-agent-core = { workspace = true }
serde       = { workspace = true }
serde_yaml  = "0.9"
ignore      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
dirs        = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
