[package]
name        = "caliban-plugins"
version     = "0.0.0"
description = "Plugin packaging orchestrator (ADR 0030) — skill / hook / agent / MCP / output-style bundles"
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
rust-version.workspace = true
publish     = false

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
dirs        = { workspace = true }
url         = { workspace = true }
reqwest     = { workspace = true }
chrono      = { workspace = true }
sha2        = { workspace = true }
semver      = { workspace = true }
tar         = { workspace = true }
flate2      = { workspace = true }
tokio       = { workspace = true, features = ["fs", "rt", "macros", "sync"] }
tempfile    = { workspace = true }

[dev-dependencies]
tempfile  = { workspace = true }
tokio     = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
wiremock  = { workspace = true }

[lints]
workspace = true
