[package]
name        = "caliban-plugins"
version.workspace = true
description = "Plugin packaging orchestrator (ADR 0030) — skill / hook / agent / MCP / output-style bundles — internal crate for the caliban binary; no API stability, pin exact versions"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true

[dependencies]
caliban-common = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
dirs        = { workspace = true }
url         = { workspace = true }
reqwest     = { workspace = true }
chrono      = { workspace = true }
sha2        = { workspace = true }
semver      = { workspace = true }
tar         = { workspace = true }
flate2      = { workspace = true }
tokio       = { workspace = true, features = ["fs", "rt", "macros", "sync"] }
tempfile    = { workspace = true }

[dev-dependencies]
tempfile  = { workspace = true }
tokio     = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
wiremock  = { workspace = true }

[lints]
workspace = true
