[package]
name        = "caliban-provider-anthropic"
version.workspace = true
description = "Anthropic Claude schema family for the caliban agent harness — internal crate for the caliban binary; no API stability, pin exact versions"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true

[features]
default = []
bedrock = ["dep:aws-config", "dep:aws-sdk-bedrockruntime", "dep:aws-smithy-types", "dep:async-stream"]
vertex  = ["dep:gcp_auth"]
live-tests = []

[dependencies]
caliban-provider   = { workspace = true }
caliban-common     = { workspace = true }
async-trait        = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
reqwest            = { workspace = true }
secrecy            = { workspace = true }
futures            = { workspace = true }
eventsource-stream = { workspace = true }
url                = { workspace = true }
bytes              = { workspace = true }
http               = { workspace = true }
tokio              = { workspace = true }

aws-config             = { workspace = true, optional = true }
aws-sdk-bedrockruntime = { workspace = true, optional = true }
aws-smithy-types       = { workspace = true, optional = true }
async-stream           = { workspace = true, optional = true }
gcp_auth               = { workspace = true, optional = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio    = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
