[package]
name        = "caliban-provider-bedrock"
version.workspace = true
description = "AWS Bedrock provider (Claude on Bedrock) for the caliban agent harness — internal crate for the caliban binary; no API stability, pin exact versions"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true

[features]
default     = []
live-tests  = []

[dependencies]
caliban-common             = { workspace = true }
caliban-provider           = { workspace = true }
caliban-provider-anthropic = { workspace = true, features = ["bedrock"] }
async-trait                = { workspace = true }
aws-config                 = { workspace = true }
aws-sdk-bedrockruntime     = { workspace = true }
tokio                      = { workspace = true }
tokio-util                 = { workspace = true }
thiserror                  = { workspace = true }
tracing                    = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "test-util"] }

[lints]
workspace = true
