[package]
name        = "caliban-provider-ollama"
version.workspace = true
description = "Ollama schema family for the caliban agent harness — internal crate for the caliban binary; no API stability, pin exact versions"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true

[features]
default = []
live-tests = []

[dependencies]
caliban-provider = { workspace = true }
caliban-common   = { workspace = true }
async-trait      = { workspace = true }
async-stream     = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
thiserror        = { workspace = true }
reqwest          = { workspace = true }
futures          = { workspace = true }
url              = { workspace = true }
bytes            = { workspace = true }
http             = { workspace = true }
tokio            = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio    = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
