[package]
name        = "caliban-provider-vertex"
version.workspace = true
description = "Google Vertex AI provider (Claude on Vertex) for the caliban agent harness — internal crate for the caliban binary; no API stability, pin exact versions"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true

[features]
default     = []
live-tests  = []

[dependencies]
caliban-common             = { workspace = true }
caliban-provider           = { workspace = true }
caliban-provider-anthropic = { workspace = true, features = ["vertex"] }
async-trait                = { workspace = true }
gcp_auth                   = { workspace = true }
reqwest                    = { workspace = true }
serde                      = { workspace = true }
serde_json                 = { workspace = true }
tokio                      = { workspace = true }
tokio-util                 = { workspace = true }
thiserror                  = { workspace = true }
tracing                    = { workspace = true }

[dev-dependencies]
tokio    = { workspace = true, features = ["macros", "rt-multi-thread", "time", "test-util"] }
wiremock = { workspace = true }

[lints]
workspace = true
