[package]
name        = "caliban-provider"
version.workspace = true
description = "Provider-neutral message IR and trait for the caliban agent harness"
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
rust-version.workspace = true
publish     = false

[features]
default = []
mock    = []

[dependencies]
async-trait = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
futures     = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
tokio    = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
