[package]
name        = "caliban-provider"
version.workspace = true
description = "Provider-neutral message IR and trait for the caliban agent harness — internal crate for the caliban binary; no API stability, pin exact versions"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true

[features]
default = []
mock    = []

[dependencies]
async-trait = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
futures     = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
reqwest     = { workspace = true }

[dev-dependencies]
tokio    = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
