[package]
name        = "caliban-sandbox"
version     = "0.0.0"
description = "OS-level sandbox (macOS Seatbelt + Linux bubblewrap) for caliban subprocess tools"
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
rust-version.workspace = true
publish     = false

[dependencies]
serde      = { workspace = true }
tokio      = { workspace = true, features = ["full"] }
tempfile   = { workspace = true }
globset    = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
toml       = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
