[package]
name        = "caliban-sandbox"
version.workspace = true
description = "OS-level sandbox (macOS Seatbelt + Linux bubblewrap) for caliban subprocess tools — internal crate for the caliban binary; no API stability, pin exact versions"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true

[dependencies]
serde      = { workspace = true }
tokio      = { workspace = true, features = ["full"] }
tempfile   = { workspace = true }
globset    = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
toml       = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
