[package]
name        = "caliban-sessions"
version.workspace = true
description = "Session persistence for the caliban agent harness — internal crate for the caliban binary; no API stability, pin exact versions"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true

[dependencies]
caliban-provider   = { workspace = true }
caliban-agent-core = { workspace = true }
caliban-common     = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
chrono             = { workspace = true }
tempfile           = { workspace = true }
dirs               = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { workspace = true }

[lints]
workspace = true
