[package]
name        = "caliban-settings"
version     = "0.0.0"
description = "Unified layered settings (managed > user > project > local) for caliban (ADR 0026)"
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
rust-version.workspace = true
publish     = false

[lints]
workspace = true

[dependencies]
serde            = { workspace = true }
serde_json       = { workspace = true }
toml             = { workspace = true }
thiserror        = { workspace = true }
anyhow           = { workspace = true }
tracing          = { workspace = true }
arc-swap         = { workspace = true }
dirs             = { workspace = true }
jsonschema       = { workspace = true }
notify           = { workspace = true }
tokio            = { workspace = true }
caliban-common     = { path = "../caliban-common" }
caliban-agent-core = { path = "../caliban-agent-core" }
caliban-mcp-client = { path = "../caliban-mcp-client" }

[dev-dependencies]
tempfile = { workspace = true }
