[package]
name        = "caliban-settings"
version.workspace = true
description = "Unified layered settings (managed > user > project > local) for caliban (ADR 0026) — internal crate for the caliban binary; no API stability, pin exact versions"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde            = { workspace = true }
serde_json       = { workspace = true }
toml             = { workspace = true }
thiserror        = { workspace = true }
anyhow           = { workspace = true }
tracing          = { workspace = true }
arc-swap         = { workspace = true }
dirs             = { workspace = true }
url              = { workspace = true }
jsonschema       = { workspace = true }
notify           = { workspace = true }
tokio            = { workspace = true }
fs2              = { workspace = true }
caliban-common     = { workspace = true }
caliban-agent-core = { workspace = true }
caliban-mcp-client = { workspace = true }
chrono             = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
