[package]
name        = "caliban-skills"
version.workspace = true
description = "Skill loader + Skill tool for the caliban agent harness — internal crate for the caliban binary; no API stability, pin exact versions"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true

[dependencies]
caliban-common     = { workspace = true }
caliban-agent-core = { workspace = true }
caliban-provider   = { workspace = true }
async-trait        = { workspace = true }
serde              = { workspace = true }
serde_yaml         = "0.9"
serde_json         = { workspace = true }
ignore             = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
dirs               = { workspace = true }

[dev-dependencies]
tempfile           = { workspace = true }
tokio              = { workspace = true, features = ["macros", "rt"] }
tokio-util         = { workspace = true }

[lints]
workspace = true
