[package]
name        = "caliban-supervisor"
version.workspace = true
description = "Per-repo supervisor daemon for caliban background sub-agents (ADR 0037)"
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
rust-version.workspace = true
publish     = false

[[bin]]
name = "caliband"
path = "src/bin/caliband.rs"

[dependencies]
async-trait = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true, features = ["full"] }
tokio-util  = { workspace = true }
tracing     = { workspace = true }
chrono      = { workspace = true }
uuid        = { workspace = true }
dirs        = { workspace = true }
sha2        = { workspace = true }
futures     = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix  = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
