[package]
name        = "caliban-tools-builtin"
version.workspace = true
description = "Built-in tools (Read/Write/Edit/Bash/Glob/Grep/WebFetch) for the caliban agent harness — internal crate for the caliban binary; no API stability, pin exact versions"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true

[dependencies]
caliban-common     = { workspace = true }
caliban-agent-core = { workspace = true }
caliban-memory     = { workspace = true }
caliban-provider   = { workspace = true }
caliban-sandbox    = { workspace = true }
arc-swap           = { workspace = true }
async-trait        = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
tokio              = { workspace = true, features = ["full"] }
tokio-util         = { workspace = true }
tracing            = { workspace = true }
globset            = { workspace = true }
ignore             = { workspace = true }
grep-regex         = { workspace = true }
grep-searcher      = { workspace = true }
grep-matcher       = { workspace = true }
dirs               = { workspace = true }
reqwest            = { workspace = true }
url                = { workspace = true }
bytes              = { workspace = true }
futures            = { workspace = true }
htmd               = "0.5"
uuid               = { workspace = true }
tempfile           = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio            = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock         = { workspace = true }
caliban-provider = { workspace = true, features = ["mock"] }

[lints]
workspace = true
