[package]
name        = "caliban-worktrees"
version.workspace = true
description = "Git worktree manager for caliban sub-agent isolation (ADR 0037)"
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
rust-version.workspace = true
publish     = false

[dependencies]
git2      = { workspace = true }
serde     = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
